refactor StreamBuilder to support parse and filter